--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
    "author": "",
    "license": "ISC",
    "dependencies": {
+      "connect-flash": "^0.1.1",
       "cookie-parser": "^1.4.5",
       "dotenv": "^8.2.0",
       "express": "^4.17.1",
       "express-handlebars": "^5.2.0",
       "express-session": "^1.17.1",
+      "express-validator": "^6.7.0",
       "mongoose": "^5.11.0",
-      "mongoose-bcrypt": "^1.9.0"
+      "mongoose-bcrypt": "^1.9.0",
+      "passport": "^0.4.1",
+      "passport-local": "^1.0.0"
    }
 }
